syntax = "proto3";

package access_v1;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "https://github.com/romanfomindev/microservices-auth/pkg/access_v1;access_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Access API"
    version: "1.0.0"
    contact: {
      name: "Roman"
      email: "romanfomindev@gmail.com"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service AccessService {
    rpc Check(CheckRequest) returns (CheckResponse) {}
}

message CheckRequest {
    string endpoint_address = 1;
}

message CheckResponse {
    string email = 1;
}

